--- a/www/css/common/tag.css
+++ b/www/css/common/tag.css
@@ -11,8 +11,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: 32px;
-    margin-top: 2px;
-    margin-right: 10px;
+    margin-right: 8px;
     border-left: 4px solid rgba(127, 127, 127, 0.5);
     background-color: rgba(127, 127, 127, 0.2);
 }
