--- a/www/css/common/textAndButtons.css
+++ b/www/css/common/textAndButtons.css
@@ -1,6 +1,7 @@
 .textAndButtons {
-    line-height: 42px;
-    padding-top: 6px;
+    line-height: 40px;
+    padding-top: 8px;
+    padding-right: 8px;
     padding-left: 16px;
     white-space: normal;
 }
@@ -8,6 +9,6 @@
 .textAndButtons-text {
     display: inline-block;
     vertical-align: top;
-    line-height: 36px;
+    line-height: 32px;
     padding-right: 6px;
 }
